added react-router link, details added for student cards

--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,76 @@
   display:flex;
   width: fit-content;
 }
+
+body {
+  background-color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+
+}
+
+.container {
+  position: absolute;
+  height: 300px;
+  /* width: 500px; */
+  /* top: 50px; */
+  /* left: calc(50% - 300px); */
+  display: flex;
+
+}
+
+.card {
+  /* display: flex; */
+  height: 300px;
+  width: 300px;
+  background-color: #C9B8FF;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #0003;
+  margin: 10px;
+  /* position: relative; */
+  /* left: 0px; */
+}
+
+.card-title {
+  color: #666666;
+  font-weight: 500;
+  /* position: absolute; */
+  margin: 0%;
+  left: 20px;
+  top: 15px;
+
+}
+
+/* .attendance-body{
+  display:flex;
+} */
+
+.attendance-buttons{
+  position:absolute;
+  bottom:0;
+}
+
+#present-button{
+  height: 50px;
+}
+
+#absent-button{
+  height: 50px;
+}
+
+/* .card:not(:first-child) {
+    margin-left: -50px;
+
+} */
+
+/* .card:hover {
+  /* transform: translateY(-20px); */
+  /* transition: 0.4s ease-out; */
+
+/* } */
+
+/* .card:hover ~ .card {
+  position: relative;
+  left: 50px;
+  transition: 0.4s ease-out;
+} */ 
+
