--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,26 @@
+
+body {
+  background-color: #a49dcbc6;
+  font-family: 'Open Sans', sans-serif;
+  /* display: grid; */
+
+}
+
 nav {
   display: flex;
+  align-items: center;
   justify-content:space-around;
-  border: solid;
+  /* border: solid; */
+  border-radius: 30px;
+  height: 50px;
+  background-color: white;
+  box-shadow: -1rem 0 3rem #0003;
+}
+
+.add-button{
+  display:flex;
+  /* align-items: center;  */
+  margin:auto;
 }
 
 .square {
@@ -20,19 +39,18 @@ nav {
   width: fit-content;
 }
 
-body {
-  background-color: #ffffff;
-  font-family: 'Open Sans', sans-serif;
-
-}
 
 .container {
-  /* position: absolute; */
+  /* position: relative; */
+  display: flex;
+  /* flex-direction: row; */
   height: 300px;
+  width: 300px;
   /* width: 500px; */
   /* top: 50px; */
   /* left: calc(50% - 300px); */
   display: flex;
+  margin: 30px;
 
 }
 
@@ -40,7 +58,8 @@ body {
   /* display: flex; */
   height: 300px;
   width: 300px;
-  background-color: #C9B8FF;
+  /* background-color: #C9B8FF; */
+  background-color: white;
   border-radius: 10px;
   box-shadow: -1rem 0 3rem #0003;
   margin: 10px;
@@ -75,20 +94,35 @@ body {
   height: 50px;
 }
 
-/* .card:not(:first-child) {
+.createStudentForm {
+  width:min-content;
+  background-color: white;
+  /* border:solid; */
+  border-radius: 200px;
+  padding: 80px;
+  padding-bottom:100px;
+  box-shadow: -1rem 0 3rem #0003;
+  display:flex;
+  /* justify-content: center; */
+  margin:auto;
+
+}
+
+
+ /* .card:not(:first-child) {
     margin-left: -50px;
 
-} */
+}  */
 
-/* .card:hover {
-  /* transform: translateY(-20px); */
-  /* transition: 0.4s ease-out; */
+ .card:hover {
+  transform: translateY(-20px); 
+ transition: 0.4s ease-out;
 
-/* } */
+ } 
 
-/* .card:hover ~ .card {
+ .card:hover ~ .card {
   position: relative;
   left: 50px;
   transition: 0.4s ease-out;
-} */ 
+}  
 
