--- a/src/style.css
+++ b/src/style.css
@@ -93,8 +93,18 @@ nav {
   height: 50px;
 }
 
+#submit-button{
+  display:flex;
+  /* justify-content: center; */
+  margin:auto;
+}
+
 #delete-button{
-  right: 10px;
+  right: 0%;
+}
+
+.StudentInfoFields {
+  display: grid;
 }
 
 .createStudentForm {
@@ -105,7 +115,8 @@ nav {
   padding: 80px;
   padding-bottom:100px;
   box-shadow: -1rem 0 3rem #0003;
-  display:flex;
+  /* display:flex; */
+  /* margin: auto; */
   /* justify-content: center; */
   margin:auto;
 
@@ -141,6 +152,10 @@ p {
   background-color: rgba(232, 150, 102, 0.813);
   width: 15%;
 }
+
+
+
+
 
 
  .card:hover {
