--- a/src/style.css
+++ b/src/style.css
@@ -206,7 +206,7 @@ p {
   border-color: rgb(214, 210, 210);
   height: 100px;
   width: 100px;
-  border-radius: 20px;
+  border-radius: 50px;
   margin-right: 15px;
   text-align:center;
  }
@@ -216,7 +216,7 @@ p {
   border-color: rgb(214, 210, 210);
   height: 100px;
   width: 100px;
-  border-radius: 20px;
+  border-radius: 50px;
   margin-left: 15px;
   text-align:center;
  }
@@ -226,4 +226,10 @@ p {
   flex-direction: row;
   justify-content: center;
   margin-bottom: 15px;
+ }
+
+ .LessonPlanTemplate{
+  margin:auto;
+  background-color:white;
+  border-radius: 50px;
  }
